@@ -8,7 +8,7 @@
 ## ####ECOSGPLCOPYRIGHTBEGIN####                                            
 ## -------------------------------------------                              
 ## This file is part of eCos, the Embedded Configurable Operating System.   
-## Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+## Copyright (C) 1998, 1999, 2000, 2001, 2002, 2010 Free Software Foundation, Inc.
 ##
 ## eCos is free software; you can redistribute it and/or modify it under    
 ## the terms of the GNU General Public License as published by the Free     
@@ -123,7 +123,7 @@ cdl_package CYGPKG_IO_USB_SLAVE {
     }
     
     cdl_option CYGPKG_IO_USB_SLAVE_TESTS {
-	display   "Kernel tests"
+	display   "USB slave tests"
 	flavor    data
 	no_define
 	default_value { "" }
