@@ -1,3 +1,13 @@
+2010-10-26  John Dallaway  <john@dallaway.org.uk>
+
+	* src/usbs.c, include/usbs.h: Extend usbs_control_endpoint struct and
+	provide usbs_get_*_endpoint() functions to facilitate dynamic data
+	endpoint configuration. Contributed by Chris Holgate.
+	[ Bugzilla 1001024]
+	* doc/usbs.sgml: Document the above changes.
+	* cdl/usbs.cdl: Fix erroneous CYGPKG_IO_USB_SLAVE_TESTS display
+	string.
+
 2008-08-28  Bart Veer  <bartv@ecoscentric.com>
 
 	* host/configure: regenerate after update of Tcl macro
@@ -186,7 +196,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2010 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
